# Emotinal-AI

./: .gitignore  README-jp.md  README.md  TODO.md  config.toml  deploy-commands.js  index.js  main.py  main_old.py  package-lock.json  package.json  pyproject.toml  start.bat  start.cmd  start_without_tts_server.cmd  synthesis.py
Planning/: 音声再生.md
commands/: ping.js
