[project]
name = "emotonalai"
version = "0.0.1"
description = "AI that behaves as if it has feelings."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.3",
    "openai>=1.59.2",
    "python-dotenv>=1.0.1",
    "pyttsx3>=2.98",
    "setuptools>=75.6.0",
    "speechrecognition>=3.10.4",
    "websockets>=14.1",
]
